fixed missing values bug

--- a/July16.ipynb
+++ b/July16.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -997,7 +997,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<pandas.core.groupby.DataFrameGroupBy object at 0x000000000A152940>\n"
+      "<pandas.core.groupby.DataFrameGroupBy object at 0x000000000A212B00>\n"
      ]
     }
    ],
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -1292,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -1332,6 +1332,275 @@
    ],
    "source": [
     "#but how does this help? Well we want one value for each day, right? So...\n",
+    "\n",
+    "nyc_groups = nyc.groupby('DATE').mean()\n",
+    "print nyc_groups"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               STATION                                      STATION_NAME  \\\n",
+      "101  GHCND:USW00094789  NEW YORK J F KENNEDY INTERNATIONAL AIRPORT NY US   \n",
+      "102  GHCND:USW00094789  NEW YORK J F KENNEDY INTERNATIONAL AIRPORT NY US   \n",
+      "103  GHCND:USW00094789  NEW YORK J F KENNEDY INTERNATIONAL AIRPORT NY US   \n",
+      "104  GHCND:USW00094789  NEW YORK J F KENNEDY INTERNATIONAL AIRPORT NY US   \n",
+      "105  GHCND:USW00094789  NEW YORK J F KENNEDY INTERNATIONAL AIRPORT NY US   \n",
+      "106  GHCND:USW00094789  NEW YORK J F KENNEDY INTERNATIONAL AIRPORT NY US   \n",
+      "170  GHCND:US1NYWC0003                        WHITE PLAINS 3.1 NNW NY US   \n",
+      "171  GHCND:US1NYWC0003                        WHITE PLAINS 3.1 NNW NY US   \n",
+      "172  GHCND:US1NYWC0003                        WHITE PLAINS 3.1 NNW NY US   \n",
+      "173  GHCND:US1NYWC0003                        WHITE PLAINS 3.1 NNW NY US   \n",
+      "174  GHCND:US1NYWC0003                        WHITE PLAINS 3.1 NNW NY US   \n",
+      "175  GHCND:US1NYWC0003                        WHITE PLAINS 3.1 NNW NY US   \n",
+      "234  GHCND:USW00014732                  NEW YORK LAGUARDIA AIRPORT NY US   \n",
+      "235  GHCND:USW00014732                  NEW YORK LAGUARDIA AIRPORT NY US   \n",
+      "236  GHCND:USW00014732                  NEW YORK LAGUARDIA AIRPORT NY US   \n",
+      "237  GHCND:USW00014732                  NEW YORK LAGUARDIA AIRPORT NY US   \n",
+      "238  GHCND:USW00014732                  NEW YORK LAGUARDIA AIRPORT NY US   \n",
+      "239  GHCND:USW00014732                  NEW YORK LAGUARDIA AIRPORT NY US   \n",
+      "409  GHCND:USW00054787                FARMINGDALE REPUBLIC AIRPORT NY US   \n",
+      "410  GHCND:USW00054787                FARMINGDALE REPUBLIC AIRPORT NY US   \n",
+      "411  GHCND:USW00054787                FARMINGDALE REPUBLIC AIRPORT NY US   \n",
+      "412  GHCND:USW00054787                FARMINGDALE REPUBLIC AIRPORT NY US   \n",
+      "413  GHCND:USW00054787                FARMINGDALE REPUBLIC AIRPORT NY US   \n",
+      "414  GHCND:USW00054787                FARMINGDALE REPUBLIC AIRPORT NY US   \n",
+      "501  GHCND:US1NYRL0005                          WEST NYACK 1.3 WSW NY US   \n",
+      "502  GHCND:US1NYRL0005                          WEST NYACK 1.3 WSW NY US   \n",
+      "503  GHCND:US1NYRL0005                          WEST NYACK 1.3 WSW NY US   \n",
+      "504  GHCND:US1NYRL0005                          WEST NYACK 1.3 WSW NY US   \n",
+      "505  GHCND:US1NYRL0005                          WEST NYACK 1.3 WSW NY US   \n",
+      "506  GHCND:US1NYRL0005                          WEST NYACK 1.3 WSW NY US   \n",
+      "..                 ...                                               ...   \n",
+      "645  GHCND:US1NYNS0007                           FLORAL PARK 0.4 W NY US   \n",
+      "646  GHCND:US1NYNS0007                           FLORAL PARK 0.4 W NY US   \n",
+      "647  GHCND:US1NYNS0007                           FLORAL PARK 0.4 W NY US   \n",
+      "648  GHCND:US1NYNS0007                           FLORAL PARK 0.4 W NY US   \n",
+      "649  GHCND:US1NYNS0007                           FLORAL PARK 0.4 W NY US   \n",
+      "650  GHCND:US1NYNS0007                           FLORAL PARK 0.4 W NY US   \n",
+      "687  GHCND:USW00094745                      WESTCHESTER CO AIRPORT NY US   \n",
+      "688  GHCND:USW00094745                      WESTCHESTER CO AIRPORT NY US   \n",
+      "689  GHCND:USW00094745                      WESTCHESTER CO AIRPORT NY US   \n",
+      "690  GHCND:USW00094745                      WESTCHESTER CO AIRPORT NY US   \n",
+      "691  GHCND:USW00094745                      WESTCHESTER CO AIRPORT NY US   \n",
+      "692  GHCND:USW00094745                      WESTCHESTER CO AIRPORT NY US   \n",
+      "734  GHCND:US1NYRC0002                        STATEN ISLAND 1.4 SE NY US   \n",
+      "735  GHCND:US1NYRC0002                        STATEN ISLAND 1.4 SE NY US   \n",
+      "736  GHCND:US1NYRC0002                        STATEN ISLAND 1.4 SE NY US   \n",
+      "737  GHCND:US1NYRC0002                        STATEN ISLAND 1.4 SE NY US   \n",
+      "738  GHCND:US1NYRC0002                        STATEN ISLAND 1.4 SE NY US   \n",
+      "739  GHCND:US1NYRC0002                        STATEN ISLAND 1.4 SE NY US   \n",
+      "740  GHCND:US1NYRC0001                       STATEN ISLAND 4.5 SSE NY US   \n",
+      "741  GHCND:US1NYRC0001                       STATEN ISLAND 4.5 SSE NY US   \n",
+      "742  GHCND:US1NYRC0001                       STATEN ISLAND 4.5 SSE NY US   \n",
+      "743  GHCND:US1NYRC0001                       STATEN ISLAND 4.5 SSE NY US   \n",
+      "744  GHCND:US1NYRC0001                       STATEN ISLAND 4.5 SSE NY US   \n",
+      "745  GHCND:US1NYRC0001                       STATEN ISLAND 4.5 SSE NY US   \n",
+      "838  GHCND:US1NYKN0025                             BROOKLYN 3.1 NW NY US   \n",
+      "839  GHCND:US1NYKN0025                             BROOKLYN 3.1 NW NY US   \n",
+      "840  GHCND:US1NYKN0025                             BROOKLYN 3.1 NW NY US   \n",
+      "841  GHCND:US1NYKN0025                             BROOKLYN 3.1 NW NY US   \n",
+      "842  GHCND:US1NYKN0025                             BROOKLYN 3.1 NW NY US   \n",
+      "843  GHCND:US1NYKN0025                             BROOKLYN 3.1 NW NY US   \n",
+      "\n",
+      "     ELEVATION  LATITUDE  LONGITUDE      DATE  EMXP  MXSD  TPCP  TSNW  EMXT  \\\n",
+      "101        3.4  40.63861  -73.76222  20150101   411   250  1350   434   128   \n",
+      "102        3.4  40.63861  -73.76222  20150201   300   200   599   347    61   \n",
+      "103        3.4  40.63861  -73.76222  20150301   282   180  1239   332   167   \n",
+      "104        3.4  40.63861  -73.76222  20150401   221     0   409     0   250   \n",
+      "105        3.4  40.63861  -73.76222  20150501   104     0   117     0   306   \n",
+      "106        3.4  40.63861  -73.76222  20150601   277     0  1267     0   322   \n",
+      "170       71.0  41.06390  -73.77220  20150101   493   NaN   509     0   NaN   \n",
+      "171       71.0  41.06390  -73.77220  20150201    74   NaN    77     0   NaN   \n",
+      "172       71.0  41.06390  -73.77220  20150301   231   NaN   856     0   NaN   \n",
+      "173       71.0  41.06390  -73.77220  20150401   587   NaN   775     0   NaN   \n",
+      "174       71.0  41.06390  -73.77220  20150501   145   NaN   162     0   NaN   \n",
+      "175       71.0  41.06390  -73.77220  20150601   132   NaN   311     0   NaN   \n",
+      "234        3.4  40.77944  -73.88028  20150101   503   230  1265   500   139   \n",
+      "235        3.4  40.77944  -73.88028  20150201   274   230   534   383    56   \n",
+      "236        3.4  40.77944  -73.88028  20150301   259   280  1155   440   156   \n",
+      "237        3.4  40.77944  -73.88028  20150401   241     0   461     0   261   \n",
+      "238        3.4  40.77944  -73.88028  20150501   325     0   410     0   306   \n",
+      "239        3.4  40.77944  -73.88028  20150601   269     0  1220     0   333   \n",
+      "409       24.7  40.73417  -73.41694  20150101   325   NaN   961   NaN   122   \n",
+      "410       24.7  40.73417  -73.41694  20150201   236   NaN   450   NaN    50   \n",
+      "411       24.7  40.73417  -73.41694  20150301   241   NaN   920   NaN   150   \n",
+      "412       24.7  40.73417  -73.41694  20150401   119   NaN   331   NaN   239   \n",
+      "413       24.7  40.73417  -73.41694  20150501    91   NaN   217   NaN   294   \n",
+      "414       24.7  40.73417  -73.41694  20150601   170   NaN   971   NaN   317   \n",
+      "501       81.7  41.08350  -73.99300  20150101   457   191  1209   254   NaN   \n",
+      "502       81.7  41.08350  -73.99300  20150201   284   NaN   289   119   NaN   \n",
+      "503       81.7  41.08350  -73.99300  20150301   239   NaN  1120     0   NaN   \n",
+      "504       81.7  41.08350  -73.99300  20150401   335   NaN   624     0   NaN   \n",
+      "505       81.7  41.08350  -73.99300  20150501   218   NaN   472     0   NaN   \n",
+      "506       81.7  41.08350  -73.99300  20150601   757   NaN  1671     0   NaN   \n",
+      "..         ...       ...        ...       ...   ...   ...   ...   ...   ...   \n",
+      "645       24.1  40.72300  -73.71100  20150101   650   305  2095   473   NaN   \n",
+      "646       24.1  40.72300  -73.71100  20150201   236   NaN   738   163   NaN   \n",
+      "647       24.1  40.72300  -73.71100  20150301   412     0  1756   457   NaN   \n",
+      "648       24.1  40.72300  -73.71100  20150401   310     0   570     0   NaN   \n",
+      "649       24.1  40.72300  -73.71100  20150501    48   NaN    93     0   NaN   \n",
+      "650       24.1  40.72300  -73.71100  20150601   394   NaN  1511     0   NaN   \n",
+      "687      115.5  41.06694  -73.70750  20150101   475   NaN  1020   NaN   217   \n",
+      "688      115.5  41.06694  -73.70750  20150201   185   NaN   384   NaN    50   \n",
+      "689      115.5  41.06694  -73.70750  20150301   226   NaN  1042   NaN   128   \n",
+      "690      115.5  41.06694  -73.70750  20150401   587   NaN   799   NaN   261   \n",
+      "691      115.5  41.06694  -73.70750  20150501   625   NaN   981   NaN   294   \n",
+      "692      115.5  41.06694  -73.70750  20150601   264   NaN  1179   NaN   322   \n",
+      "734       21.9  40.56740  -74.13270  20150101   457   203  1851   333   NaN   \n",
+      "735       21.9  40.56740  -74.13270  20150201   617   NaN  1229   266   NaN   \n",
+      "736       21.9  40.56740  -74.13270  20150301   310   102  1665   410   NaN   \n",
+      "737       21.9  40.56740  -74.13270  20150401   262   NaN   371     0   NaN   \n",
+      "738       21.9  40.56740  -74.13270  20150501    97   NaN   169     0   NaN   \n",
+      "739       21.9  40.56740  -74.13270  20150601   582   NaN  1770     0   NaN   \n",
+      "740       10.7  40.54210  -74.14760  20150101   282   249   653    13   NaN   \n",
+      "741       10.7  40.54210  -74.14760  20150201   472   127   495     0   NaN   \n",
+      "742       10.7  40.54210  -74.14760  20150301   191   241   518     0   NaN   \n",
+      "743       10.7  40.54210  -74.14760  20150401   193   NaN   322     0   NaN   \n",
+      "744       10.7  40.54210  -74.14760  20150501    56   NaN   133     0   NaN   \n",
+      "745       10.7  40.54210  -74.14760  20150601   488   NaN  1616     0   NaN   \n",
+      "838        5.5  40.68460  -73.98670  20150101   490    25  1093   305   NaN   \n",
+      "839        5.5  40.68460  -73.98670  20150201    60   241    63    76   NaN   \n",
+      "840        5.5  40.68460  -73.98670  20150301   248   279  1008   274   NaN   \n",
+      "841        5.5  40.68460  -73.98670  20150401    33   NaN   117     0   NaN   \n",
+      "842        5.5  40.68460  -73.98670  20150501     8   NaN    11     0   NaN   \n",
+      "843        5.5  40.68460  -73.98670  20150601    89   NaN   420     0   NaN   \n",
+      "\n",
+      "     EMNT  MMXT  MMNT  MNTM  \n",
+      "101  -132    30   -43    -7  \n",
+      "102  -160     4   -85   -41  \n",
+      "103  -105    74    -9    32  \n",
+      "104     6   161    68   114  \n",
+      "105    61   227   131   179  \n",
+      "106   106   259   177   218  \n",
+      "170   NaN   NaN   NaN   NaN  \n",
+      "171   NaN   NaN   NaN   NaN  \n",
+      "172   NaN   NaN   NaN   NaN  \n",
+      "173   NaN   NaN   NaN   NaN  \n",
+      "174   NaN   NaN   NaN   NaN  \n",
+      "175   NaN   NaN   NaN   NaN  \n",
+      "234  -132    22   -46   -12  \n",
+      "235  -160     0   -86   -43  \n",
+      "236   -93    73    -8    33  \n",
+      "237    11   164    73   119  \n",
+      "238    89   247   142   194  \n",
+      "239   100   258   179   218  \n",
+      "409  -138    24   -51   -14  \n",
+      "410  -166    -5  -103   -54  \n",
+      "411  -110    67   -21    23  \n",
+      "412   -16   150    55   103  \n",
+      "413    56   223   125   174  \n",
+      "414   100   249   167   208  \n",
+      "501   NaN   NaN   NaN   NaN  \n",
+      "502   NaN   NaN   NaN   NaN  \n",
+      "503   NaN   NaN   NaN   NaN  \n",
+      "504   NaN   NaN   NaN   NaN  \n",
+      "505   NaN   NaN   NaN   NaN  \n",
+      "506   NaN   NaN   NaN   NaN  \n",
+      "..    ...   ...   ...   ...  \n",
+      "645   NaN   NaN   NaN   NaN  \n",
+      "646   NaN   NaN   NaN   NaN  \n",
+      "647   NaN   NaN   NaN   NaN  \n",
+      "648   NaN   NaN   NaN   NaN  \n",
+      "649   NaN   NaN   NaN   NaN  \n",
+      "650   NaN   NaN   NaN   NaN  \n",
+      "687  -149    15   -71   -28  \n",
+      "688  -205   -20  -124   -72  \n",
+      "689  -177    54   -39     7  \n",
+      "690   -27   152    45    99  \n",
+      "691    50   238   112   175  \n",
+      "692    89   242   153   198  \n",
+      "734   NaN   NaN   NaN   NaN  \n",
+      "735   NaN   NaN   NaN   NaN  \n",
+      "736   NaN   NaN   NaN   NaN  \n",
+      "737   NaN   NaN   NaN   NaN  \n",
+      "738   NaN   NaN   NaN   NaN  \n",
+      "739   NaN   NaN   NaN   NaN  \n",
+      "740   NaN   NaN   NaN   NaN  \n",
+      "741   NaN   NaN   NaN   NaN  \n",
+      "742   NaN   NaN   NaN   NaN  \n",
+      "743   NaN   NaN   NaN   NaN  \n",
+      "744   NaN   NaN   NaN   NaN  \n",
+      "745   NaN   NaN   NaN   NaN  \n",
+      "838   NaN   NaN   NaN   NaN  \n",
+      "839   NaN   NaN   NaN   NaN  \n",
+      "840   NaN   NaN   NaN   NaN  \n",
+      "841   NaN   NaN   NaN   NaN  \n",
+      "842   NaN   NaN   NaN   NaN  \n",
+      "843   NaN   NaN   NaN   NaN  \n",
+      "\n",
+      "[79 rows x 15 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Those numbers are a bit high!\n",
+    "import numpy as np\n",
+    "\n",
+    "datakeys = [u'EMXP', u'MXSD', u'TPCP', u'TSNW', u'EMXT', u'EMNT', u'MMXT', u'MMNT', u'MNTM']\n",
+    "for dk in datakeys:\n",
+    "    nyc[dk][nyc[dk]==-9999]= np.nan\n",
+    "\n",
+    "print nyc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          ELEVATION   LATITUDE  LONGITUDE        EMXP        MXSD  \\\n",
+      "DATE                                                                \n",
+      "20150101  34.069231  40.789296 -73.825647  461.000000  240.300000   \n",
+      "20150201  34.069231  40.789296 -73.825647  263.538462  255.666667   \n",
+      "20150301  34.069231  40.789296 -73.825647  248.000000  246.000000   \n",
+      "20150401  34.069231  40.789296 -73.825647  289.769231    0.000000   \n",
+      "20150501  34.069231  40.789296 -73.825647  165.923077    0.000000   \n",
+      "20150601  33.571429  40.784668 -73.803001  366.500000    0.000000   \n",
+      "\n",
+      "                 TPCP        TSNW        EMXT        EMNT        MMXT  \\\n",
+      "DATE                                                                    \n",
+      "20150101  1258.230769  351.090909  144.500000 -137.833333   20.666667   \n",
+      "20150201   497.692308  217.090909   54.666667 -172.500000   -6.666667   \n",
+      "20150301  1159.000000  317.000000  152.000000 -118.666667   66.666667   \n",
+      "20150401   487.307692    0.000000  256.500000   -4.333333  158.000000   \n",
+      "20150501   256.307692    0.000000  300.833333   65.833333  238.000000   \n",
+      "20150601  1279.928571    0.000000  322.166667   97.333333  253.000000   \n",
+      "\n",
+      "                MMNT        MNTM  \n",
+      "DATE                              \n",
+      "20150101  -53.500000  -16.500000  \n",
+      "20150201  -99.833333  -53.333333  \n",
+      "20150301  -19.000000   23.666667  \n",
+      "20150401   61.333333  109.833333  \n",
+      "20150501  129.166667  183.500000  \n",
+      "20150601  167.333333  210.500000  \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\story645\\Anaconda\\lib\\site-packages\\pandas\\core\\series.py:632: SettingWithCopyWarning: A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "  self.where(~key, value, inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
     "nyc_groups = nyc.groupby('DATE').mean()\n",
     "print nyc_groups"
    ]
