added small tick labeling example

--- a/july20.ipynb
+++ b/july20.ipynb
@@ -10,7 +10,7 @@
     "* Error bar plots\n",
     "* Histograms\n",
     "\n",
-    "CWK: Compute the mean, median, mode and standard deviation for each city for temperature and precipitation. Plot the temperature and precipitation plots with error bars and the the histograms for both variables for all 4 cities. Submit these graphs and a paragraph discussing whether the mean, median, and standard deviation are accurate representations of the variability in the data given the histogram. Use the 2005-2010 dataset and all graphs must be created using Python."
+    "CWK: Compute the mean, median, and standard deviation for each city for temperature and precipitation. Plot the temperature and precipitation plots with error bars and the min and max and the the histograms for both variables for all 4 cities. Submit these graphs and a paragraph discussing whether the mean, median, and standard deviation are accurate representations of the variability in the data given the histogram. Use the 2005-2010 dataset and all graphs must be created using Python."
    ]
   },
   {
@@ -1580,6 +1580,234 @@
     "(nyc_agg['MNTM']/10).hist(ax=ax)\n",
     "ax.set_xlabel(\"Temperature (C)\")\n",
     "ax.set_ylabel(\"Counts\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>EMXP</th>\n",
+       "      <th>MXSD</th>\n",
+       "      <th>TPCP</th>\n",
+       "      <th>TSNW</th>\n",
+       "      <th>EMXT</th>\n",
+       "      <th>EMNT</th>\n",
+       "      <th>MMXT</th>\n",
+       "      <th>MMNT</th>\n",
+       "      <th>MNTM</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DATE</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>101 </th>\n",
+       "      <td> 295.214286</td>\n",
+       "      <td>  43.100000</td>\n",
+       "      <td>  763.285714</td>\n",
+       "      <td>  49.900000</td>\n",
+       "      <td> 148.285714</td>\n",
+       "      <td>-119.571429</td>\n",
+       "      <td>  48.000000</td>\n",
+       "      <td> -21.142857</td>\n",
+       "      <td>  13.428571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>201 </th>\n",
+       "      <td> 265.142857</td>\n",
+       "      <td> 267.000000</td>\n",
+       "      <td>  684.357143</td>\n",
+       "      <td> 167.000000</td>\n",
+       "      <td> 163.583333</td>\n",
+       "      <td> -98.700000</td>\n",
+       "      <td>  58.583333</td>\n",
+       "      <td> -26.571429</td>\n",
+       "      <td>  14.900000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>301 </th>\n",
+       "      <td> 432.153846</td>\n",
+       "      <td>  39.857143</td>\n",
+       "      <td>  824.666667</td>\n",
+       "      <td>  30.636364</td>\n",
+       "      <td> 227.700000</td>\n",
+       "      <td> -62.333333</td>\n",
+       "      <td>  96.400000</td>\n",
+       "      <td>   8.000000</td>\n",
+       "      <td>  52.090909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>401 </th>\n",
+       "      <td> 493.000000</td>\n",
+       "      <td>   0.000000</td>\n",
+       "      <td>  978.200000</td>\n",
+       "      <td>   0.000000</td>\n",
+       "      <td> 275.000000</td>\n",
+       "      <td>   4.727273</td>\n",
+       "      <td> 161.818182</td>\n",
+       "      <td>  64.500000</td>\n",
+       "      <td> 112.909091</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>501 </th>\n",
+       "      <td> 346.538462</td>\n",
+       "      <td>   0.000000</td>\n",
+       "      <td> 1079.714286</td>\n",
+       "      <td>   0.000000</td>\n",
+       "      <td> 308.777778</td>\n",
+       "      <td>  55.636364</td>\n",
+       "      <td> 214.333333</td>\n",
+       "      <td> 115.909091</td>\n",
+       "      <td> 167.166667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>601 </th>\n",
+       "      <td> 403.633333</td>\n",
+       "      <td>   0.000000</td>\n",
+       "      <td> 1103.517949</td>\n",
+       "      <td>   0.000000</td>\n",
+       "      <td> 336.375000</td>\n",
+       "      <td> 112.958333</td>\n",
+       "      <td> 262.030303</td>\n",
+       "      <td> 172.708333</td>\n",
+       "      <td> 215.916667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>701 </th>\n",
+       "      <td> 310.612981</td>\n",
+       "      <td>   0.000000</td>\n",
+       "      <td>  961.594872</td>\n",
+       "      <td>   0.000000</td>\n",
+       "      <td> 354.602273</td>\n",
+       "      <td> 159.279762</td>\n",
+       "      <td> 295.946970</td>\n",
+       "      <td> 205.193182</td>\n",
+       "      <td> 250.613636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>801 </th>\n",
+       "      <td> 333.465686</td>\n",
+       "      <td>   0.000000</td>\n",
+       "      <td>  903.439216</td>\n",
+       "      <td>   0.000000</td>\n",
+       "      <td> 335.863636</td>\n",
+       "      <td> 148.689394</td>\n",
+       "      <td> 283.797980</td>\n",
+       "      <td> 197.627778</td>\n",
+       "      <td> 240.916667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>901 </th>\n",
+       "      <td> 291.625000</td>\n",
+       "      <td>   0.000000</td>\n",
+       "      <td>  717.785714</td>\n",
+       "      <td>   0.000000</td>\n",
+       "      <td> 316.214286</td>\n",
+       "      <td>  93.848485</td>\n",
+       "      <td> 244.702020</td>\n",
+       "      <td> 159.931818</td>\n",
+       "      <td> 202.428571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1001</th>\n",
+       "      <td> 401.082418</td>\n",
+       "      <td>   0.000000</td>\n",
+       "      <td> 1070.448718</td>\n",
+       "      <td>   0.000000</td>\n",
+       "      <td> 257.440476</td>\n",
+       "      <td>  28.469697</td>\n",
+       "      <td> 180.285714</td>\n",
+       "      <td> 102.097222</td>\n",
+       "      <td> 141.233333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1101</th>\n",
+       "      <td> 259.400641</td>\n",
+       "      <td>   0.000000</td>\n",
+       "      <td>  709.028205</td>\n",
+       "      <td>   0.000000</td>\n",
+       "      <td> 199.916667</td>\n",
+       "      <td> -24.772727</td>\n",
+       "      <td> 115.483333</td>\n",
+       "      <td>  40.655303</td>\n",
+       "      <td>  78.904545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1201</th>\n",
+       "      <td> 336.280952</td>\n",
+       "      <td>  45.960227</td>\n",
+       "      <td> 1112.011905</td>\n",
+       "      <td>  87.664336</td>\n",
+       "      <td> 168.077922</td>\n",
+       "      <td> -72.833333</td>\n",
+       "      <td>  66.863636</td>\n",
+       "      <td>  -7.022727</td>\n",
+       "      <td>  29.136364</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            EMXP        MXSD         TPCP        TSNW        EMXT        EMNT  \\\n",
+       "DATE                                                                            \n",
+       "101   295.214286   43.100000   763.285714   49.900000  148.285714 -119.571429   \n",
+       "201   265.142857  267.000000   684.357143  167.000000  163.583333  -98.700000   \n",
+       "301   432.153846   39.857143   824.666667   30.636364  227.700000  -62.333333   \n",
+       "401   493.000000    0.000000   978.200000    0.000000  275.000000    4.727273   \n",
+       "501   346.538462    0.000000  1079.714286    0.000000  308.777778   55.636364   \n",
+       "601   403.633333    0.000000  1103.517949    0.000000  336.375000  112.958333   \n",
+       "701   310.612981    0.000000   961.594872    0.000000  354.602273  159.279762   \n",
+       "801   333.465686    0.000000   903.439216    0.000000  335.863636  148.689394   \n",
+       "901   291.625000    0.000000   717.785714    0.000000  316.214286   93.848485   \n",
+       "1001  401.082418    0.000000  1070.448718    0.000000  257.440476   28.469697   \n",
+       "1101  259.400641    0.000000   709.028205    0.000000  199.916667  -24.772727   \n",
+       "1201  336.280952   45.960227  1112.011905   87.664336  168.077922  -72.833333   \n",
+       "\n",
+       "            MMXT        MMNT        MNTM  \n",
+       "DATE                                      \n",
+       "101    48.000000  -21.142857   13.428571  \n",
+       "201    58.583333  -26.571429   14.900000  \n",
+       "301    96.400000    8.000000   52.090909  \n",
+       "401   161.818182   64.500000  112.909091  \n",
+       "501   214.333333  115.909091  167.166667  \n",
+       "601   262.030303  172.708333  215.916667  \n",
+       "701   295.946970  205.193182  250.613636  \n",
+       "801   283.797980  197.627778  240.916667  \n",
+       "901   244.702020  159.931818  202.428571  \n",
+       "1001  180.285714  102.097222  141.233333  \n",
+       "1101  115.483333   40.655303   78.904545  \n",
+       "1201   66.863636   -7.022727   29.136364  "
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nyc_month.median()"
    ]
   },
   {
