updated july 21 tasks

--- a/july20.ipynb
+++ b/july20.ipynb
@@ -98,7 +98,7 @@
    },
    "outputs": [],
    "source": [
-    "nyc_month=nyc_agg.groupby(nyc_agg.index%10000)"
+    "nyc_month=nyc_agg.groupby(nyc_agg.index.values%10000)"
    ]
   },
   {
