--- a/july21.ipynb
+++ b/july21.ipynb
@@ -11,7 +11,7 @@
     "* Reading in netcdf global temperature files\n",
     "* Heatmap of monthly temperature\n",
     "\n",
-    "CWK: Plot New York, Philadelphia, Newark and Boston on a map and color the points based on the average temperature and precipitation of the city (2 plots).  Plot the mean global temperature and precipitation and the standard deviation. Submit these graphs and a paragraph comparing the city’s average temperature and precipitation (and the variability in it) to each other and to the regional pattern. Use the 2010-2015 data for this task and the netcdf files for 03/2009, 06/2009, 09/2009, 12/2009."
+    "CWK: Plot New York, Philadelphia, Newark and Boston on a map and color the points based on the average temperature and precipitation of the city (2 plots-1 for each variable ).  Plot the monthly mean global temperature and precipitation (the netcdf files) and plot the corresponding city data on the map. Submit these graphs and a paragraph comparing the city’s average temperature and precipitation (and the variability in it) to the regional pattern. Use the 2005-2015 data for this task and the netcdf files for 03/2009, 06/2009, 09/2009, 12/2009."
    ]
   },
   {
